chrome/app_shim/app_shim_delegate.h
@@ -19,8 +19,6 @@ class AppShimController;
     : NSObject<NSApplicationDelegate, NSUserInterfaceValidations> {
  @private
   AppShimController* appShimController_;  // Weak, initially NULL.
-  BOOL terminateNow_;
-  BOOL terminateRequested_;
   std::vector<base::FilePath> filesToOpenAtStartup_;
 }
 
@@ -36,10 +34,6 @@ class AppShimController;
 // Otherwise, this adds the files to |filesToOpenAtStartup_|.
 // Takes an array of NSString*.
 - (void)openFiles:(NSArray*)filename;
-
-// Terminate immediately. This is necessary as we override terminate: to send
-// a QuitApp message.
-- (void)terminateNow;
 
 @end
 
